[gd_scene load_steps=4 format=3 uid="uid://c8rxt7617vao1"]

[ext_resource type="Script" path="res://scenes/capture_point.gd" id="1_mqhir"]
[ext_resource type="PackedScene" uid="uid://4ea1pkh7ycme" path="res://models/capture_point.glb" id="2_i8rm8"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_o3pvj"]
radius = 2.0

[node name="CapturePoint" type="Node3D"]
script = ExtResource("1_mqhir")

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 6

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CylinderShape3D_o3pvj")

[node name="capture_point" parent="." instance=ExtResource("2_i8rm8")]

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
